--- a/parrots.yaml
+++ b/parrots.yaml
@@ -507,3 +507,6 @@
 - hd: hd/thankyouparrot.gif
   name: Thank You Parrot
   tip: Appreciate it
+- hd: hd/astronautparrot.gif
+  name: Astronaut Parrot
+  tip: To the moon!
