Add Autonomous Parrot

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -510,3 +510,5 @@
 - hd: hd/astronautparrot.gif
   name: Astronaut Parrot
   tip: To the moon!
+- hd: hd/autonomousparrot.gif
+  name: Autonomous Parrot
