Add flag of Free Belarus

--- a/flags.yaml
+++ b/flags.yaml
@@ -132,6 +132,8 @@
   name: Finland
 - hd: hd/franceparrot.gif
   name: France
+- hd: hd/freebelarusparrot.gif
+  name: Free Belarus
 - hd: hd/gabonparrot.gif
   name: Gabon
 - hd: hd/gambiaparrot.gif
