Add Vibe Party Cat
Closes #523

Thanks @lollercopter!

--- a/guests.yaml
+++ b/guests.yaml
@@ -84,3 +84,5 @@
   tip: The best Catherine streamer there is
 - hd: hd/partyfsjal.gif
   name: Party fsjal
+- hd: hd/vibepartycat.gif
+  name: Vibe Party Cat
