Party Picard makes it so

--- a/contributors.yaml
+++ b/contributors.yaml
@@ -514,3 +514,7 @@
   contributions:
   - action: crying Jordan parrot
     pr: 357
+- username: infinitewarp
+  contributions:
+  - action: Party Picard
+    pr: 572
