--- a/guests.yaml
+++ b/guests.yaml
@@ -86,3 +86,6 @@
   name: Party fsjal
 - hd: hd/vibepartycat.gif
   name: Vibe Party Cat
+- hd: hd/partypicard.gif
+  name: Party Picard
+  tip: Make it so!
