--- a/parrots.yaml
+++ b/parrots.yaml
@@ -514,3 +514,6 @@
   name: Autonomous Parrot
 - hd: hd/boomparrot.gif
   name: Boom Parrot
+- hd: maskparrot.gif
+  name: Masked Parrot
+  tip: safety is number one priority
