--- a/guests.yaml
+++ b/guests.yaml
@@ -89,3 +89,6 @@
 - hd: hd/partypicard.gif
   name: Party Picard
   tip: Make it so!
+- hd: partyrocket.gif
+  name: Party Rocket
+  tip: For successful launch!
