Add Deploy, Cursed, Up Arrow Parrots

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -196,6 +196,13 @@
   name: Rotating Parrot
 - gif: cryptoparrot.gif
   name: Crypto Parrot
+- gif: deployparrot.gif
+  name: Deploy Parrot
+  tip: Do not use emoji on Fridays
+- gif: cursedparrot.gif
+  name: Cursed Parrot
+- gif: uparrowparrot.gif
+  name: Up Arrow Parrot
 - hd: hd/sushiparrot.gif
   name: Sushi Parrot
 - hd: hd/pumpkinparrot.gif
