Add reee parrot (#538)
Co-authored-by: John Hobbs <john@velvetcache.org>

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -516,3 +516,6 @@
   name: Boom Parrot
 - gif: hidetheparrot.gif
   name: Hide The Parrot
+- hd: hd/reeeparrot.gif
+  name: Reee Parrot
+  tip: Reeeeeeeeeeeeeeeeeeeeeeeeeeeee
