--- a/guests.yaml
+++ b/guests.yaml
@@ -92,3 +92,6 @@
 - hd: partyrocket.gif
   name: Party Rocket
   tip: For successful launch!
+- hd: hd/discoduck.gif
+  name: Disco Duck
+  tip: For when your coworker misremembers the name of the party parrot
