--- a/parrots.yaml
+++ b/parrots.yaml
@@ -519,3 +519,6 @@
 - hd: hd/reeeparrot.gif
   name: Reee Parrot
   tip: Reeeeeeeeeeeeeeeeeeeeeeeeeeeee
+- hd: hd/redbeeparrot.gif
+  name: Red Bee Parrot
+  tip: Zzzzzzz
