--- a/parrots.yaml
+++ b/parrots.yaml
@@ -516,4 +516,6 @@
   name: Boom Parrot
 - hd: hd/maskparrot.gif
   name: Masked Parrot
+- hd: hd/colanderparrot.gif
+  name: Colander Parrot  
   tip: safety is number one priority
