--- a/guests.yaml
+++ b/guests.yaml
@@ -95,3 +95,6 @@
 - hd: hd/discoduck.gif
   name: Disco Duck
   tip: For when your coworker misremembers the name of the party parrot
+- hd: hd/partymoogle.gif
+  name: Party Moogle
+  tip: Partying since 1990, kupo!
