Add Deploy, Cursed, Up Arrow Parrots (#578)
* Add Deploy, Cursed, Up Arrow Parrots

* Remove cursed parrot to avoid duplication

* Remove cursed from main yaml file

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -196,6 +196,11 @@
   name: Rotating Parrot
 - gif: cryptoparrot.gif
   name: Crypto Parrot
+- gif: deployparrot.gif
+  name: Deploy Parrot
+  tip: Do not use emoji on Fridays
+- gif: uparrowparrot.gif
+  name: Up Arrow Parrot
 - hd: hd/sushiparrot.gif
   name: Sushi Parrot
 - hd: hd/pumpkinparrot.gif
