--- a/parrots.yaml
+++ b/parrots.yaml
@@ -502,4 +502,7 @@
 - hd: hd/mergeconflictparrot.gif
   name: Merge Conflict Parrot 
   tip: Ruh roh
+- hd: hd/standupparrot.gif
+  name: Standup Parrot 
+  tip:  Stand up not sit down
 
