merge-train-parrot

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -519,3 +519,6 @@
 - hd: hd/reeeparrot.gif
   name: Reee Parrot
   tip: Reeeeeeeeeeeeeeeeeeeeeeeeeeeee
+- hd: hd/mergetrainparrot.gif
+  name: Merge Train Parrot
+  tip: All aboard the merge train
