Behold the stand-up-parrot

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -524,3 +524,6 @@
   tip: safety is number one priority
 - hd: hd/reactparrot.gif
   name: React Parrot
+- gif: standupparrot.gif
+  name: Standup Parrot 
+  tip:  Stand up not sit down
