--- a/parrots.yaml
+++ b/parrots.yaml
@@ -524,3 +524,6 @@
   tip: safety is number one priority
 - hd: hd/reactparrot.gif
   name: React Parrot
+- hd: hd/mergeimmediatelyparrot.gif
+  name: Merge Immediately Parrot 
+  tip: Merge it with complete disregard
