Behold the merge-train-parrot

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -524,3 +524,6 @@
   tip: safety is number one priority
 - hd: hd/reactparrot.gif
   name: React Parrot
+- hd: hd/mergetrainparrot.gif
+  name: Merge Train Parrot
+  tip: All aboard the merge train
