Behold the merge-immediately-parrot (#591)
Co-authored-by: Elijah Bernstein-Cooper <ebernstein-cooper@lexile.com>

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -527,3 +527,6 @@
 - gif: standupparrot.gif
   name: Standup Parrot 
   tip:  Stand up not sit down
+- hd: hd/mergeimmediatelyparrot.gif
+  name: Merge Immediately Parrot 
+  tip: Merge it with complete disregard
