--- a/parrots.yaml
+++ b/parrots.yaml
@@ -527,6 +527,9 @@
 - gif: standupparrot.gif
   name: Standup Parrot 
   tip:  Stand up not sit down
+- hd: hd/mergetrainparrot.gif
+  name: Merge Train Parrot
+  tip: All aboard the merge train
 - hd: hd/mergeimmediatelyparrot.gif
   name: Merge Immediately Parrot 
   tip: Merge it with complete disregard
