--- a/guests.yaml
+++ b/guests.yaml
@@ -98,3 +98,6 @@
 - hd: hd/partymoogle.gif
   name: Party Moogle
   tip: Partying since 1990, kupo!
+- hd: hd/gumiparrot.gif
+  name: Party Gumi
+  tip: wuewuewuewue
