--- a/parrots.yaml
+++ b/parrots.yaml
@@ -533,3 +533,6 @@
 - hd: hd/mergeimmediatelyparrot.gif
   name: Merge Immediately Parrot 
   tip: Merge it with complete disregard
+- hd: hd/excitementparrot.gif
+  name: Excitement Parrot
+  tip: Watch and Excitement Parrot
