Moves Braveheart parrot to HD directory

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -342,7 +342,7 @@
 - gif: mergedparrot.gif
   name: Merged Parrot
   tip: Celebrating the merge!
-- gif: braveheartparrot.gif
+- hd: hd/braveheartparrot.gif
   name: Braveheart Parrot
 - hd: hd/maracasparrot.gif
   name: Maracas Parrot
