--- a/parrots.yaml
+++ b/parrots.yaml
@@ -471,7 +471,7 @@
   tip: Looks kinda sus
 - hd: hd/kindasusparrot.gif
   name: Kinda Sus Parrot
-- gif: chefparrot.gif
+- hd: hd/chefparrot.gif
   name: Chef parrot
   tip: Cooking parrot
 - hd: hd/turndownforwatchparrot.gif
