Moves exceptionally fast parrot to HD directory

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -373,7 +373,7 @@
   tip: Or any medical professional really...
 - hd: hd/rythmicalparrot.gif
   name: Rythmical Parrot
-- gif: exceptionallyfastparrot.gif
+- hd: hd/exceptionallyfastparrot.gif
   name: Exceptionally Fast Parrot
 - hd: hd/wfhparrot.gif
   name: Work from Home Parrot
