Moves RIP parrot to HD directory

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -319,7 +319,7 @@
   name: Boba Parrot
 - hd: hd/backwardsparrot.gif
   name: Backwards Parrot
-- gif: ripparrot.gif
+- hd: hd/ripparrot.gif
   name: RIP Parrot
 - hd: hd/shortparrot.gif
   name: Short Parrot
