Moves unicorn parrot to HD directory

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -455,7 +455,7 @@
   tip: One Hundred Fifty-One Parrot
 - hd: hd/cakeparrot.gif
   name: Cake Parrot
-- gif: unicornparrot.gif
+- hd: hd/unicornparrot.gif
   name: Unicorn Parrot
 - hd: hd/thefastestparrot.gif
   name: The Fastest Parrot
