--- a/parrots.yaml
+++ b/parrots.yaml
@@ -533,3 +533,5 @@
 - hd: hd/mergeimmediatelyparrot.gif
   name: Merge Immediately Parrot 
   tip: Merge it with complete disregard
+- hd: hd/badparrot.gif
+  name: Bad Bad Parrot
