feat: make coffee parrot HD

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -99,7 +99,7 @@
   name: Moonwalking Parrot
 - hd: hd/thumbsupparrot.gif
   name: Thumbs Up Parrot
-- gif: coffeeparrot.gif
+- hd: hd/coffeeparrot.gif
   name: Coffee Parrot
 - hd: hd/mustacheparrot.gif
   name: Parrot with mustache
