--- a/parrots.yaml
+++ b/parrots.yaml
@@ -535,3 +535,5 @@
   tip: Merge it with complete disregard
 - hd: hd/badparrot.gif
   name: Bad Bad Parrot
+  - hd: hd/lovelyparrot.gif
+  name: Lovely Parrot
