--- a/parrots.yaml
+++ b/parrots.yaml
@@ -535,3 +535,5 @@
   tip: Merge it with complete disregard
 - hd: hd/badparrot.gif
   name: Bad Bad Parrot
+- gif: roastedparrot.gif
+  name: Roasted Reaction Parrot
