Add Harold parrot

--- a/guests.yaml
+++ b/guests.yaml
@@ -101,3 +101,6 @@
 - hd: hd/gumiparrot.gif
   name: Party Gumi
   tip: wuewuewuewue
+- gif: haroldparrot.gif
+  name: Harold Parrot
+  tip: Harold hiding pain parrot. Who knows if he like it
