--- a/parrots.yaml
+++ b/parrots.yaml
@@ -535,5 +535,7 @@
   tip: Merge it with complete disregard
 - hd: hd/badparrot.gif
   name: Bad Bad Parrot
+- gif: dizzyparrot.gif
+  name: Pixelated parrot dizzy after spinning
 - hd: hd/lovelyparrot.gif
   name: Lovely Parrot
