added stickbugparrot.gif and added description lol

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -537,3 +537,6 @@
   name: Bad Bad Parrot
 - gif: dizzyparrot.gif
   name: Pixelated parrot dizzy after spinning
+- gif: sickbugparrot.gif
+  name: Stick Bug as Party Parrot
+  tip: Get Party Stick Bugged LOL
