--- a/parrots.yaml
+++ b/parrots.yaml
@@ -540,3 +540,5 @@
 - gif: sickbugparrot.gif
   name: Stick Bug as Party Parrot
   tip: Get Party Stick Bugged LOL
+- gif: mongodbparrot.gif
+  name: MongoDB Parrot
