Add MongoDB Parrot (#611)
* added stickbugparrot.gif and added description lol

* added mongodbparrot.gif

* removed wrong old gif

* fixed requested changes

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -537,3 +537,5 @@
   name: Bad Bad Parrot
 - gif: dizzyparrot.gif
   name: Pixelated parrot dizzy after spinning
+- gif: mongodbparrot.gif
+  name: MongoDB Parrot
