Add 4k matrix parrot

--- a/contributors.yaml
+++ b/contributors.yaml
@@ -518,3 +518,7 @@
   contributions:
   - action: Party Picard
     pr: 572
+- username: TimGoldbach
+  contributions:
+  - action: Matrix Parrot
+    pr: 614
