--- a/parrots.yaml
+++ b/parrots.yaml
@@ -160,7 +160,8 @@
   tip: 1970s Party Parrot
 - gif: matrixparrot.gif
   name: Matrix Parrot
-  tip: This Parrot took the Red Pill
+- 4k: 4k/matrixparrot.gif
+  name: Matrix Parrot
 - gif: papalparrot.gif
   name: Papal Parrot
 - gif: stalkerparrot.gif
