--- a/parrots.yaml
+++ b/parrots.yaml
@@ -543,3 +543,5 @@
   gif: matrixparrot.gif
 - gif: drupal_parrot.gif
   name: A parrot that uses Drupal I guess
+- gif: krakenparrot.gif
+  name: Kraken Parrot
