add soccer parrot

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -545,3 +545,5 @@
   name: A parrot that uses Drupal I guess
 - gif: krakenparrot.gif
   name: Kraken Parrot
+- hd: hd/soccerparrot.gif
+  name: Soccer Parrot
