Add minion parrot

--- a/guests.yaml
+++ b/guests.yaml
@@ -104,3 +104,6 @@
 - gif: haroldparrot.gif
   name: Harold Parrot
   tip: Harold hiding pain parrot. Who knows if he like it
+- gif: minionparrot.gif
+  name: Minion Parrot
+  tip: I've created a monstrosity
