add chefkiss, deleted, fasttwins, & vacation parrots

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -554,3 +554,11 @@
 - hd: hd/temporaltableparrot.gif
   name: Temporal Table Parrot
   tip: System Versioning all your SQL tables
+- hd: hd/chefkissparrot.gif
+  name: Chef Kiss Parrot
+- hd: hd/deletedparrot.gif
+  name: Deleted Parrot
+- hd: hd/fasttwinsparrot.gif
+  name: Fast Twins Parrot
+- hd: hd/vacationparrot.gif
+  name: Vacation Parrot
