--- a/parrots.yaml
+++ b/parrots.yaml
@@ -562,3 +562,5 @@
   name: Fast Twins Parrot
 - hd: hd/vacationparrot.gif
   name: Vacation Parrot
+- gif: espressomartiniparrot.gif
+  name: Espresso Martini Parrot
