--- a/parrots.yaml
+++ b/parrots.yaml
@@ -562,5 +562,5 @@
   name: Fast Twins Parrot
 - hd: hd/vacationparrot.gif
   name: Vacation Parrot
-- hd: spaceshipparrot.gif
+- gif: spaceshipparrot.gif
   name: Spaceship Parrot
