added rich party parrot

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -569,3 +569,5 @@
 - hd: hd/resonatingredparrot.gif
   name: Resonating Red Parrot
   tip: Blue and Green Parrots told Red Parrot something
+- gif: richpartyparrot.gif
+  name: Rich Party Parrot
