add espresso martini parrot (#637)
* add espresso martini parrot

* add espresso martini to yaml file

* fix gif dim

---------

Co-authored-by: John Hobbs <john@velvetcache.org>

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -562,5 +562,7 @@
   name: Fast Twins Parrot
 - hd: hd/vacationparrot.gif
   name: Vacation Parrot
+- gif: espressomartiniparrot.gif
+  name: Espresso Martini Parrot
 - hd: hd/hackerparrot.gif
   name: Hacker Parrot
