Move resonating red parrot to HD

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -566,577 +566,6 @@
   name: Espresso Martini Parrot
 - hd: hd/hackerparrot.gif
   name: Hacker Parrot
-- gif: resonatingredparrot.gif
-  name: Resonating Red Parrot
-  tip: Blue and Green Parrots told Red Parrot something
-||||||| parent of 64a1bb5 (Reuploaded parrots.yaml File)
-- hd: hd/parrot.gif
-  name: Parrot
-- hd: hd/opensourceparrot.gif
-  name: Open-source Parrot
-- hd: hd/middleparrot.gif
-  name: Middle Parrot
-- hd: hd/reverseparrot.gif
-  name: Reverse Parrot
-- hd: hd/aussieparrot.gif
-  name: Aussie Parrot
-- hd: hd/gothparrot.gif
-  name: Goth Parrot
-- gif: oldtimeyparrot.gif
-  name: Old Timey Parrot
-- hd: hd/boredparrot.gif
-  name: Bored Parrot
-- hd: hd/shuffleparrot.gif
-  name: Shuffle Parrot
-- gif: shufflefurtherparrot.gif
-  name: Shuffle Further Parrot
-  tip: Combine with Shuffle Parrot for a conga line!
-- hd: hd/congaparrot.gif
-  name: Conga Line Parrot
-  tip: A self sufficient conga line parrot!
-- hd: hd/reversecongaparrot.gif
-  name: Reverse Conga Line Parrot
-- hd: hd/partyparrot.gif
-  name: Party Parrot
-- hd: hd/sadparrot.gif
-  name: Sad Parrot
-  tip: Parrots are entitled to their full range of emotions.
-- hd: hd/copparrot.gif
-  name: Cop Parrot
-  tip: Not to be confused with Stripper Parrot!
-- hd: hd/fastparrot.gif
-  name: Fast Parrot
-  tip: Now with 50% more party!
-- hd: hd/ultrafastparrot.gif
-  name: Ultra Fast Parrot
-  tip: Now with 150% more party!
-- hd: hd/slowparrot.gif
-  name: Slow Parrot
-  tip: Web 1.0 all over again!
-- gif: slomoparrot.gif
-  name: Slo-mo Parrot
-  tip: Party in slow motion.
-- hd: hd/dadparrot.gif
-  name: Dad Parrot
-  tip: Is totally freaking out.
-- hd: hd/dealwithitparrot.gif
-  name: Deal With It Parrot
-- hd: hd/dealwithitnowparrot.gif
-  name: Deal With It Now Parrot
-- gif: fiestaparrot.gif
-  name: Fiesta Parrot
-- gif: pizzaparrot.gif
-  name: !!str "\U0001F355 Parrot"
-- gif: hamburgerparrot.gif
-  name: !!str "\U0001F354 Parrot"
-- gif: bananaparrot.gif
-  name: !!str "\U0001F34C Parrot"
-- gif: chillparrot.gif
-  name: Chill Parrot
-- gif: explodyparrot.gif
-  name: Explody Parrot
-- gif: shufflepartyparrot.gif
-  name: Shuffle Party Parrot
-- gif: icecreamparrot.gif
-  name: Ice-Cream Parrot
-- hd: hd/sassyparrot.gif
-  name: Sassy Parrot
-- hd: hd/confusedparrot.gif
-  name: Confused Parrot
-- hd: hd/aussiecongaparrot.gif
-  name: Aussie Conga Line Parrot
-- hd: hd/aussiereversecongaparrot.gif
-  name: Aussie Reverse Conga Line Parrot
-- gif: wave1parrot.gif
-  name: Parrot Wave (1)
-- gif: wave2parrot.gif
-  name: Parrot Wave (2)
-- gif: wave3parrot.gif
-  name: Parrot Wave (3)
-- gif: wave4parrot.gif
-  name: Parrot Wave (4)
-- gif: wave5parrot.gif
-  name: Parrot Wave (5)
-- gif: wave6parrot.gif
-  name: Parrot Wave (6)
-- gif: wave7parrot.gif
-  name: Parrot Wave (7)
-- gif: wave8parrot.gif
-  name: Parrot Wave (8)
-- gif: wave9parrot.gif
-  name: Parrot Wave (9)
-- hd: hd/congapartyparrot.gif
-  name: Conga Party Parrot
-- hd: hd/moonwalkingparrot.gif
-  name: Moonwalking Parrot
-- hd: hd/thumbsupparrot.gif
-  name: Thumbs Up Parrot
-- hd: hd/coffeeparrot.gif
-  name: Coffee Parrot
-- hd: hd/mustacheparrot.gif
-  name: Parrot with mustache
-- hd: hd/christmasparrot.gif
-  name: Christmas Parrot
-- hd: hd/sleepingparrot.gif
-  name: Sleepy Parrot
-- hd: hd/beerparrot.gif
-  name: Happy Hour Parrot
-- gif: darkbeerparrot.gif
-  name: Dark Beer Parrot
-- gif: blondesassyparrot.gif
-  name: Blonde Sassy Parrot
-- gif: bluescluesparrot.gif
-  name: Blues Clues Parrot
-- hd: hd/gentlemanparrot.gif
-  name: Gentleman Parrot
-  tip: A true gentleman parrot
-- gif: margaritaparrot.gif
-  name: Margarita Parrot
-  tip: Fiesta Parrot is getting his drink on, margarita style!
-- gif: dreidelparrot.gif
-  name: Dreidel Parrot
-  tip: Happy Hanukkah!
-- gif: harrypotterparrot.gif
-  name: Harry Potter Parrot
-  tip: You're a parrot-wizard Harry!
-- gif: upvoteparrot.gif
-  name: Upvote Parrot
-- hd: hd/twinsparrot.gif
-  name: Twins Parrot
-  tip: parrot + parrot = great party!
-- gif: tripletsparrot.gif
-  name: Triplets Parrot
-  tip: parrot + parrot + parrot = magnificent party!!!!
-- hd: hd/stableparrot.gif
-  name: Stable Parrot
-  tip: Gyrostablization Mode Initiated
-- gif: shipitparrot.gif
-  name: Ship It Parrot
-- gif: skiparrot.gif
-  name: Ski Parrot
-- gif: loveparrot.gif
-  name: Love Parrot
-- gif: halalparrot.gif
-  name: Halal Parrot
-- hd: hd/wendyparrot.gif
-  name: Wendy's Parrot
-  tip: BACONATOR OR DIE!
-- hd: hd/popcornparrot.gif
-  name: Popcorn Parrot
-- hd: hd/donutparrot.gif
-  name: Donut Parrot
-- hd: hd/evilparrot.gif
-  name: Evil Parrot
-- hd: hd/discoparrot.gif
-  name: Disco Parrot
-  tip: 1970s Party Parrot
-- gif: matrixparrot.gif
-  name: Matrix Parrot
-  tip: This Parrot took the Red Pill
-- gif: papalparrot.gif
-  name: Papal Parrot
-- gif: stalkerparrot.gif
-  name: Stalker Parrot
-- hd: hd/scienceparrot.gif
-  name: Science Parrot
-- hd: hd/revolutionparrot.gif
-  name: Revolution Parrot
-- gif: fidgetparrot.gif
-  name: Fidget Spinner Parrot
-- hd: hd/beretparrot.gif
-  name: Beret Parrot
-- gif: tacoparrot.gif
-  name: Taco Parrot
-- gif: ryangoslingparrot.gif
-  name: Ryan Gosling Parrot
-- gif: luckyparrot.gif
-  name: Lucky Parrot
-- hd: hd/birthdaypartyparrot.gif
-  name: Birthday Party Parrot
-- hd: hd/jediparrot.gif
-  name: Jedi Parrot
-- hd: hd/sithparrot.gif
-  name: Sith Parrot
-  tip: Feel the power of the darkside
-- hd: hd/angryparrot.gif
-  name: Angry Parrot
-- hd: hd/invisibleparrot.gif
-  name: Invisible Parrot
-- gif: fadingparrot.gif
-  name: Fading Parrot
-- gif: rotatingparrot.gif
-  name: Rotating Parrot
-- gif: cryptoparrot.gif
-  name: Crypto Parrot
-- gif: deployparrot.gif
-  name: Deploy Parrot
-  tip: Do not use emoji on Fridays
-- gif: uparrowparrot.gif
-  name: Up Arrow Parrot
-- hd: hd/sushiparrot.gif
-  name: Sushi Parrot
-- hd: hd/pumpkinparrot.gif
-  name: Pumpkin Parrot
-- hd: hd/angelparrot.gif
-  name: Angel Parrot
-- hd: hd/bluntparrot.gif
-  name: Blunt Parrot
-- hd: hd/sintparrot.gif
-  name: Sinterklaas Parrot
-- hd: hd/pirateparrot.gif
-  name: Pirate Parrot
-- hd: hd/ceilingparrot.gif
-  name: Ceiling Parrot
-- hd: hd/mardigrasparrot.gif
-  name: Mardi Gras Parrot
-  tip: Laissez les bons temps rouler!
-- gif: sovjetparrot.gif
-  name: Soviet Parrot
-  tip: даваи даваи!
-- gif: portalparrot.gif
-  name: Portal Parrot
-  tip: The cake is a lie.
-- hd: hd/hardhatparrot.gif
-  name: Hard Hat Parrot
-  tip: ! '[Under Construction]'
-- hd: hd/flyingmoneyparrot.gif
-  name: Flying Money Parrot
-  tip: The money is flying away!
-- hd: hd/portalorangeparrot.gif
-  name: Portal Parrot (Orange Portal)
-- hd: hd/portalblueparrot.gif
-  name: Portal Parrot (Blue Portal)
-- hd: hd/reverseportalorangeparrot.gif
-  name: Reverse Portal Parrot (Orange Portal)
-- hd: hd/reverseportalblueparrot.gif
-  name: Reverse Portal Parrot (Blue Portal)
-- hd: hd/bunnyparrot.gif
-  name: Bunny Parrot
-  tip: Real men love bunnies
-- hd: hd/norwegianblueparrot.gif
-  name: Norwegian Blue Parrot
-  tip: Remarkable bird, the Norwegian Blue, idn'it, ay?
-- hd: hd/transparront.gif
-  name: Transparront
-- gif: fixparrot.gif
-  name: Fix Parrot
-- hd: hd/brazilianplayerparrot.gif
-  name: Brazilian Player Parrot
-- hd: hd/brazilianfanparrot.gif
-  name: Brazilian Fan Parrot
-- hd: hd/spyparrot.gif
-  name: Spy Parrot
-- hd: hd/marshmallowparrot.gif
-  name: Marshmallow Parrot
-- hd: hd/whitewalkerparrot.gif
-  name: White Walker Parrot
-- hd: hd/calvinist_parrot.gif
-  name: Calvinist Parrot
-- hd: hd/frenchparrot.gif
-  name: French Parrot
-  tip: Oulala
-- hd: hd/githubparrot.gif
-  name: Github Party Parrot
-  tip: Github PR Party
-- hd: hd/bootlegparrot.gif
-  name: Bootleg Parrot
-- hd: hd/bikerparrot.gif
-  name: Biker Parrot
-- hd: hd/inverseparrot.gif
-  name: Inverse Parrot
-- hd: hd/pingpongparrot.gif
-  name: Ping Pong Parrot
-- hd: hd/laptop_parrot.gif
-  name: Laptop Parrot
-- hd: hd/60fpsparrot.gif
-  name: 60fps Parrot
-- hd: hd/redhatparrot.gif
-  name: Red Hat Parrot
-  tip: Soon to be IBM parrot...
-- hd: hd/footballparrot.gif
-  name: Football Parrot
-- hd: hd/flowerparrot.gif
-  name: Flower Parrot
-- hd: hd/parrotnotfound.gif
-  name: Parrot Not Found
-- hd: hd/spinningparrot.gif
-  name: Spinning Parrot
-- hd: hd/redenvelopeparrot.gif
-  name: Red Envelope Parrot
-  tip: Happy Lunar New Year!
-- hd: hd/grouchoparrot.gif
-  name: Groucho Parrot
-- hd: hd/chicoparrot.gif
-  name: Chico Parrot
-- hd: hd/harpoparrot.gif
-  name: Harpo Parrot
-- gif: schnitzelparrot.gif
-  name: Schnitzel Parrot
-- hd: hd/vikingparrot.gif
-  name: Viking Parrot
-- hd: hd/darkmodeparrot.gif
-  name: Dark Mode Parrot
-- hd: hd/tiedyeparrot.gif
-  name: Tie Dye Parrot
-- hd: hd/horizontalparrot.gif
-  name: Horizontal Parrot
-- hd: hd/sherlockholmesparrot.gif
-  name: Sherlock Parrot
-- hd: hd/tennisparrot.gif
-  name: Tennis Parrot
-- hd: hd/originalparrot.gif
-  name: Original Parrot
-  tip: The one and only.
-- hd: hd/bobaparrot.gif
-  name: Boba Parrot
-- hd: hd/backwardsparrot.gif
-  name: Backwards Parrot
-- hd: hd/ripparrot.gif
-  name: RIP Parrot
-- hd: hd/shortparrot.gif
-  name: Short Parrot
-  tip: Someone get a ladder
-- hd: hd/headsetparrot.gif
-  name: Headset Parrot
-  tip: Hear no evil
-- hd: hd/bouncingparrot.gif
-  name: Bouncing Parrot
-- hd: hd/levitationparrot.gif
-  name: Levitation Parrot
-- hd: hd/verticalparrot.gif
-  name: Vertical Parrot
-- gif: databaseparrot.gif
-  name: Database Parrot
-  tip: To sql or not to sql
-- hd: hd/phparrot.gif
-  name: PHParrot
-  tip: if (!$party) { die(); }
-- gif: mergedparrot.gif
-  name: Merged Parrot
-  tip: Celebrating the merge!
-- hd: hd/braveheartparrot.gif
-  name: Braveheart Parrot
-- hd: hd/maracasparrot.gif
-  name: Maracas Parrot
-- gif: bobrossparrot.gif
-  name: Bob Ross Parrot
-  tip: Happy trees, happy life!
-- hd: hd/yosemitesamparrot.gif
-  name: Yosemite Sam Parrot
-  tip: Now I got you Rabbit!
-- hd: hd/illuminatiparrot.gif
-  name: Illuminati Parrot
-  tip: All Seeing Parrot
-- hd: hd/michaeljacksonparrot.gif
-  name: Michael Jackson Parrot
-- hd: hd/picassoparrot.gif
-  name: Picasso Parrot
-- hd: hd/headingparrot.gif
-  name: Heading Parrot
-- hd: hd/innersourceparrot.gif
-  name: InnerSource Parrot
-  tip: InnerSource-Commons Parrot
-- gif: asyncparrot.gif
-  name: async Parrot
-- hd: hd/meldparrot.gif
-  name: Meld Parrot
-- hd: hd/docparrot.gif
-  name: Doc Parrot
-  tip: Or any medical professional really...
-- hd: hd/rythmicalparrot.gif
-  name: Rythmical Parrot
-- hd: hd/exceptionallyfastparrot.gif
-  name: Exceptionally Fast Parrot
-- hd: hd/wfhparrot.gif
-  name: Work from Home Parrot
-- hd: hd/covid19parrot.gif
-  name: COVID-19 Parrot
-  tip: Parrot takes a break from partying to socially distance
-- gif: metalparrot.gif
-  name: Metal Parrot
-- hd: hd/wineparrot.gif
-  name: Wine Parrot
-  tip: Parrot and a Pinot
-- hd: hd/hypnoparrot.gif
-  name: Hypno Parrot
-  tip: You are getting sleepy!
-- hd: hd/hypnoparrotdark.gif
-  name: Hypno Parrot Dark
-- hd: hd/hypnoparrotlight.gif
-  name: Hypno Parrot Light
-- hd: hd/everythingsfineparrot.gif
-  name: Everything Is Fine Parrot
-  tip: It's really not
-- hd: hd/headbangingparrot.gif
-  name: Head Banging Parrot
-- hd: hd/tpparrot.gif
-  name: TP Parrot
-  tip: Don't Hoard, ppl
-- hd: hd/stayhomeparrot.gif
-  name: Stay Home Parrot
-  tip: He's in there
-- hd: hd/stayhomeparrotcloser.gif
-  name: Stay Home Parrot Closer
-  tip: See I told you
-- hd: hd/stayhomeparrotwindow.gif
-  name: Stay Home Parrot Window
-  tip: Get off my lawn
-- hd: hd/staytfhomeparrot.gif
-  name: Stay TF Home Parrot
-  tip: Can I help you?
-- hd: hd/rubyparrot.gif
-  name: Ruby Parrot
-  tip: This Parrot surely loves gems
-- hd: hd/moonparrot.gif
-  name: Moon Parrot
-  tip: Parrot and the moon
-- hd: hd/hmmparrot.gif
-  name: Hmm Parrot
-  tip: Hmmmmm...
-- hd: hd/nodeparrot.gif
-  name: Node Parrot
-  tip: party.on("end",e => {die()})
-- hd: hd/hanamiparrot.gif
-  name: Hanami Parrot
-  tip: Very beautiful
-- gif: revertitparrot.gif
-  name: Revert It Parrot
-- hd: hd/daftpunkparrot.gif
-  name: Daft Punk Parrot
-  tip: Harder Better Faster Stronger
-- hd: hd/zoukparrot.gif
-  name: Zouk Parrot
-  tip: Parrot turned tropical
-- hd: hd/glimpseparrot.gif
-  name: Glimpse Parrot
-  tip: A glimpse from the wall
-- hd: hd/dailyparrot.gif
-  name: Daily Parrot
-  tip: A parrot to announce daily meetings
-- hd: hd/quadparrot.gif
-  name: Quad Parrot
-- gif: dabparrot.gif
-  name: Dab Parrot
-- hd: hd/jumpingparrot.gif
-  name: Gots some hops
-- hd: hd/jumpingparrotjr.gif
-  name: Jr. Bounce Parrot
-  tip: Aww hey little fella
-- hd: hd/pokeparrot.gif
-  name: 151 Pokémon Parrot
-  tip: One Hundred Fifty-One Parrot
-- hd: hd/cakeparrot.gif
-  name: Cake Parrot
-- hd: hd/unicornparrot.gif
-  name: Unicorn Parrot
-- hd: hd/thefastestparrot.gif
-  name: The Fastest Parrot
-  tip: Really fast
-- hd: hd/playcatchleftparrot.gif
-  name: Catch ball Left Parrot
-- hd: hd/playcatchrightparrot.gif
-  name: Catch ball Right Parrot
-- hd: hd/biparrot.gif
-  name: Bi Parrot
-- hd: hd/imposterparrot.gif
-  name: Imposter Parrot
-  tip: Looks kinda sus
-- hd: hd/kindasusparrot.gif
-  name: Kinda Sus Parrot
-- hd: hd/chefparrot.gif
-  name: Chef parrot
-  tip: Cooking parrot
-- hd: hd/turndownforwatchparrot.gif
-  name: Turn Down for Watch
-- gif: pear-parrots.gif
-  name: Pear Parrots
-- hd: hd/tinfoilhatparrot.gif
-  name: Tin foil hat Parrot
-- hd: hd/mateparrot.gif
-  name: Mate Parrot
-  tip: South-american mate fan Parrot
-- gif: ethparrot.gif
-  name: Ethereum Parrot
-- hd: hd/sneezyparrot.gif
-  name: Sneezy Parrot
-- hd: hd/accessibleparrot.gif
-  name: Accessible Parrot
-- gif: pythonparrot.gif
-  name: Python Parrot
-- hd: hd/redbullparrot.gif
-  name: Redbull Parrot
-- hd: hd/vueparrot.gif
-  name: Vue Parrot
-- hd: hd/sidewaysparrot.gif
-  name: Sideways Parrot
-- hd: hd/raceconditionparrot.gif
-  name: Race Condition Parrot
-- hd: hd/balconyparrot.gif
-  name: Balcony Parrot
-- hd: hd/zombieparrot.gif
-  name: Zombie Parrot
-  tip: Feel better soon little guy!
-- hd: hd/mergeconflictparrot.gif
-  name: Merge Conflict Parrot
-  tip: Ruh roh
-- hd: hd/vaccineparrot.gif
-  name: Vaccine Parrot
-- hd: hd/thankyouparrot.gif
-  name: Thank You Parrot
-  tip: Appreciate it
-- hd: hd/astronautparrot.gif
-  name: Astronaut Parrot
-  tip: To the moon!
-- hd: hd/autonomousparrot.gif
-  name: Autonomous Parrot
-- hd: hd/boomparrot.gif
-  name: Boom Parrot
-- hd: hd/maskparrot.gif
-  name: Masked Parrot
-  tip: safety is number one priority
-- hd: hd/reactparrot.gif
-  name: React Parrot
-- gif: standupparrot.gif
-  name: Standup Parrot 
-  tip:  Stand up not sit down
-- hd: hd/mergetrainparrot.gif
-  name: Merge Train Parrot
-  tip: All aboard the merge train
-- hd: hd/mergeimmediatelyparrot.gif
-  name: Merge Immediately Parrot 
-  tip: Merge it with complete disregard
-- hd: hd/badparrot.gif
-  name: Bad Bad Parrot
-- gif: dizzyparrot.gif
-  name: Pixelated parrot dizzy after spinning
-- gif: mongodbparrot.gif
-  name: MongoDB Parrot
-- name: Matrix Parrot
-  gif: matrixparrot.gif
-- gif: drupal_parrot.gif
-  name: A parrot that uses Drupal I guess
-- gif: krakenparrot.gif
-  name: Kraken Parrot
-- hd: hd/soccerparrot.gif
-  name: Soccer Parrot
-- hd: hd/blurryparrot.gif
-  name: Blurry Parrot
-- hd: hd/croissantparrot.gif
-  name: Croissant Parrot
-- hd: hd/temporaltableparrot.gif
-  name: Temporal Table Parrot
-  tip: System Versioning all your SQL tables
-- hd: hd/chefkissparrot.gif
-  name: Chef Kiss Parrot
-- hd: hd/deletedparrot.gif
-  name: Deleted Parrot
-- hd: hd/fasttwinsparrot.gif
-  name: Fast Twins Parrot
-- hd: hd/vacationparrot.gif
-  name: Vacation Parrot
-- gif: resonatingredparrot.gif
-  name: Resonating Red Parrot
-  tip: Blue and Green Parrots told Red Parrot something
-- gif: resonatingredparrot.gif
+- hd: hd/resonatingredparrot.gif
   name: Resonating Red Parrot
   tip: Blue and Green Parrots told Red Parrot something
