Added Resonating Red Parrot for Hacktoberfest! (#643)
* Added parrots.yaml file

* Added Resonating Red Parrot

Created Resonating Red Parrot GIF for Hacktoberfest!

* Reuploaded parrots.yaml File

I redownloaded the original `parrots.yaml` file from cultofthepartyparrot.com's main GitHub Branch and added my Resonating Red Parrot information back in. It should only have added Resonating Red Parrot information without reformatting the whole file.

* Move resonating red parrot to HD

---------

Co-authored-by: John Hobbs <john@velvetcache.org>

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -566,3 +566,6 @@
   name: Espresso Martini Parrot
 - hd: hd/hackerparrot.gif
   name: Hacker Parrot
+- hd: hd/resonatingredparrot.gif
+  name: Resonating Red Parrot
+  tip: Blue and Green Parrots told Red Parrot something
