--- a/guests.yaml
+++ b/guests.yaml
@@ -107,3 +107,6 @@
 - gif: minionparrot.gif
   name: Minion Parrot
   tip: I've created a monstrosity
+- hd: hd/partytux.gif
+  name: Party Tux
+  tip: more than 30 years of partying!
