the world needs more yelling

--- a/guests.yaml
+++ b/guests.yaml
@@ -110,3 +110,6 @@
 - hd: hd/partytux.gif
   name: Party Tux
   tip: more than 30 years of partying!
+- hd: hd/old-man-yells-at-parrot.gif
+  name: Old man yells at parrot
+  tip: whole lotta yelling
