--- a/parrots.yaml
+++ b/parrots.yaml
@@ -144,6 +144,8 @@
   name: Ski Parrot
 - gif: loveparrot.gif
   name: Love Parrot
+- gif: lightsaberparrot.gif
+  name: Lightsaber Parrot
 - gif: halalparrot.gif
   name: Halal Parrot
 - hd: hd/wendyparrot.gif
