--- a/parrots.yaml
+++ b/parrots.yaml
@@ -146,6 +146,8 @@
   name: Love Parrot
 - gif: halalparrot.gif
   name: Halal Parrot
+- gif: halloweenparrot.gif
+  name: Halloween Parrot
 - hd: hd/wendyparrot.gif
   name: Wendy's Parrot
   tip: BACONATOR OR DIE!
