Factorio yellow belt parrot!

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -575,3 +575,6 @@
   name: Bride Parrot
 - gif: groomparrot.gif
   name: Groom Parrot
+- gif: beltparrot.gif
+  name: Belt Parrot
+  tip: Sushi, spaghetti, or lasagna?
