--- a/parrots.yaml
+++ b/parrots.yaml
@@ -22,7 +22,7 @@
 - hd: hd/congaparrot.gif
   name: Conga Line Parrot
   tip: A self sufficient conga line parrot!
-- gid: realisticparrot.gif
+- gif: realisticparrot.gif
   name: Realistic Parrot
 - hd: hd/reversecongaparrot.gif
   name: Reverse Conga Line Parrot
