--- a/parrots.yaml
+++ b/parrots.yaml
@@ -578,3 +578,5 @@
 - gif: beltparrot.gif
   name: Belt Parrot
   tip: Sushi, spaghetti, or lasagna?
+- gif: sombreroparrot.gif
+  name: Sombrero Parrot
