HD Party Oriole

--- a/guests.yaml
+++ b/guests.yaml
@@ -1,8 +1,8 @@
 - hd: hd/nyanparrot.gif
   name: Nyan Parrot
-- gif: oriolesparrot.gif
+- hd: hd/partyoriole.gif
   name: Orioles Parrot
-  tip: This parrot loves the orioles so much he turned into one!
+  tip: This parrot loves the Orioles so much he turned into one!
 - hd: hd/capsparrot.gif
   name: Capitals Parrot
   tip: C! A! P! S! CAPS! CAPS! CAPS!!.
