--- a/guests.yaml
+++ b/guests.yaml
@@ -110,3 +110,6 @@
 - hd: hd/old-man-yells-at-parrot.gif
   name: Old man yells at parrot
   tip: whole lotta yelling
+- hd: hd/partypear.gif
+  name: Party pear, for all your pair programming needs
+  tip: Bring the party to your pear programming
